Added a note into the header

--- a/src/_includes/masthead.html
+++ b/src/_includes/masthead.html
@@ -41,6 +41,7 @@
         </button>
         <ul class="hidden-links hidden"></ul>
       </nav>
+      Right now I'm actively working to translate all relevant articles into English
     </div>
   </div>
 </div>
